@@ -12,6 +12,9 @@ Mark Spencer      <IM: markster97>		markster@marko.net
 
 Other Contributors:
 
+Thanks to Torrey Searle for the spell checking code that
+accompanies the gtk_text box :)
+
 ** LOGO DESIGNED BY: Naru Sundar **
 
 Peter Teichiman <peter@helixcode.com>
