@@ -332,7 +332,7 @@ struct signon {
 #define TYPE_SIGNOFF   4
 #define TYPE_KEEPALIVE 5
 
-#define REVISION "gaim:$Revision: 208 $"
+#define REVISION "gaim:$Revision: 216 $"
 #define FLAPON "FLAPON\r\n\r\n"
 
 #define ROAST "Tic/Toc"
@@ -401,6 +401,7 @@ extern int general_options;
 #define OPT_GEN_SAVED_WINDOWS    0x00001000
 #define OPT_GEN_DISCARD_WHEN_AWAY 0x00002000
 #define OPT_GEN_CHECK_VERSIONS	0x00004000
+#define OPT_GEN_CHECK_SPELLING	0x00008000
 
 extern int display_options;
 #define OPT_DISP_SHOW_TIME       0x00000001
@@ -480,6 +481,7 @@ extern char *sec_to_text(int);
 extern struct aim_user *find_user(const char *);
 extern char *full_date();
 extern void check_gaim_versions();
+extern void spell_check(GtkWidget *);
 
 /* Functions in server.c */
 /* input to serv */
